# sof

./: .gitignore  CHANGELOG.md  CONFORMANCE.md  Cargo.toml  README.md  install.sh  justfile
.github/workflows/: ci.yml  docs.yml  release.yml
crates/octofhir-sof/: Cargo.toml
crates/octofhir-sof-cli/: Cargo.toml
crates/octofhir-sof-cli/src/: diagnostic.rs  main.rs
crates/octofhir-sof-lint/: Cargo.toml
crates/octofhir-sof-lint/src/: finding.rs  lib.rs  provider.rs  shareable.rs  structure.rs  view_lint.rs
crates/octofhir-sof/src/: column.rs  eval.rs  lib.rs  runner.rs  sql_generator.rs  view_definition.rs
crates/octofhir-sof/src/output/: parquet_writer.rs
crates/octofhir-sof/src/sql_generator/: boundary.rs  constants.rs  ddl.rs  dialect.rs  lower.rs  mod.rs
crates/octofhir-sof/tests/: conformance.rs  conformance_duckdb.rs  conformance_memory.rs  integration.rs
crates/octofhir-sof/tests/extra/: contained.json  multi_version_r5.json
crates/octofhir-sof/tests/extra_memory/: fhirpath_functions.json
crates/octofhir-sof/tests/spec/: SOURCE.md  fn_boundary.json  repeat.json
docs/: PLAN.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx  install.md  quickstart.md
docs/src/content/docs/guides/: conformance.md  fhir-versions.md  linting.md  sql-dialects.md
docs/src/content/docs/reference/: cli.md  library.md
docs/src/content/docs/rules/: fh01.md  fh02.md  fh03.md  fh04.md  fh05.md  fh06.md  fh07.md  fh08.md  fh09.md  fh10.md  fh11.md  index.md
examples/: invalid_view.json  patient_contacts.json  patient_demographics.json  patients.ndjson  schema_violations.json  shareable_violations.json
src/: column.rs  lib.rs  sql_generator.rs  view_definition.rs
src/output/: csv.rs  mod.rs  ndjson.rs
tests/: integration.rs
