[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/octofhir/sof"
homepage = "https://github.com/octofhir/sof"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]

[workspace.dependencies]
# Ecosystem (crates.io)
octofhir-fhirpath = "0.4.46"
octofhir-fhirschema = "0.3.19"
octofhir-canonical-manager = "0.2.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full", "io-util"] }
futures-util = "0.3"
pin-project-lite = "0.2"

# Database
sqlx-core = { version = "0.8.6", default-features = false, features = [
    "_rt-tokio",
    "json",
] }
sqlx-postgres = { version = "0.8.6", default-features = false, features = [
    "json",
] }

# Output formats
csv = "1.4"
arrow = { version = "58" }
parquet = { version = "58", features = ["arrow", "snap", "zstd", "lz4", "flate2"] }

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"
