[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/octofhir/sof"
homepage = "https://github.com/octofhir/sof"
authors = ["OctoFHIR Team <funyloony@gmail.com>"]

[workspace.dependencies]
# Internal (version is required so dependent crates carry a real requirement
# when published to crates.io; keep in sync with workspace.package.version)
octofhir-sof = { path = "crates/octofhir-sof", version = "0.1.2" }
octofhir-sof-lint = { path = "crates/octofhir-sof-lint", version = "0.1.2" }

# Ecosystem (crates.io)
octofhir-fhirpath = "0.4.46"
octofhir-fhirschema = "0.3.19"
octofhir-canonical-manager = "0.2.2"

# CLI
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1.0"
annotate-snippets = "0.11"

# Lint engine (banshee, published on crates.io)
banshee_hir = "0.1.0"
banshee_parser = "0.1.0"
banshee_syntax = "0.1.0"
banshee_format = "0.1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full", "io-util"] }
futures-util = "0.3"
pin-project-lite = "0.2"

# Database
sqlx-core = { version = "0.9.0", default-features = false, features = [
    "_rt-tokio",
    "json",
] }
sqlx-postgres = { version = "0.9.0", default-features = false, features = [
    "json",
] }

# Output formats
csv = "1.4"
arrow = { version = "58" }
parquet = { version = "58", features = ["arrow", "snap", "zstd", "lz4", "flate2"] }

# Error handling
thiserror = "2.0"

# Tracing
tracing = "0.1"
