[package]
name = "octofhir-sof-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Command-line interface for octofhir-sof (SQL on FHIR)"

[[bin]]
name = "octofhir-sof"
path = "src/main.rs"

[dependencies]
octofhir-sof = { workspace = true }
octofhir-sof-lint = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sqlx-postgres = { workspace = true }

[features]
default = []
parquet = ["octofhir-sof/parquet"]
